--- a/package.json
+++ b/package.json
@@ -11,18 +11,30 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.4",
+    "@langchain/core": "^0.3.8",
+    "@langchain/openai": "^0.3.5",
     "@react-leaflet/core": "^2.1.0",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.18.0",
+    "@types/three": "^0.169.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "firebase": "^10.14.0",
+    "firebase-admin": "^12.6.0",
     "framer-motion": "^11.9.0",
+    "html-react-parser": "^5.1.18",
     "leaflet": "^1.9.4",
     "next": "14.2.13",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icon-cloud": "^4.1.4",
     "react-leaflet": "^4.2.1",
     "react-youtube": "^10.1.0",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
