--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@langchain/community": "^0.3.4",
     "@langchain/core": "^0.3.8",
     "@langchain/openai": "^0.3.5",
+    "@nextui-org/tooltip": "^2.0.41",
     "@react-leaflet/core": "^2.1.0",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
@@ -24,12 +25,14 @@
     "framer-motion": "^11.9.0",
     "html-react-parser": "^5.1.18",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
     "react-leaflet": "^4.2.1",
+    "react-lodash": "^0.1.2",
     "react-youtube": "^10.1.0",
     "tailwind-merge": "^2.5.2",
     "three": "^0.170.0"
