--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.18.0",
     "@types/three": "^0.169.0",
+    "@vercel/blob": "^0.26.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.0",
